# AI-Driven-Recruitment

./: .gitignore  Dockerfile  README.md  check_db.py  dockerfile  main.py  pyproject.toml  requirements.txt  test.py
agent/: __init__.py  filter_tools.py  interview_prep.py  linkedin_optimizer.py  prompts.py  resume_agent.py  resume_optimizer.py  semantic_search.py  vector_store.py
api/: admin.py  auth.py  config.py  cover_letter.py  main.py  password_reset.py  routes_auth.py  routes_interview.py  routes_jobs.py  routes_linkedin.py  routes_oauth.py  routes_profile.py  routes_resume.py  routes_semantic.py
config/: config.py  settings.py
database/: __init__.py  db.py
database/models/: password_reset.py
outputs/: results.json
tools/: __init__.py  company_research.py  cover_letter_tools.py  filter_tools.py  indeed_scraper.py  job_search_tools.py  linkedin_scraper.py  ranking_tools.py  resume_tailor.py  resume_tools.py  semantic_search.py
utils/: __init__.py  email.py  helpers.py  logger.py
